--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource    #当前数据源操作类
     driver-class-name: com.mysql.jdbc.Driver       #mysql驱动包
-    url: jdbc:mysql://localhost:3306/springboot     #数据库名
+    url: jdbc:mysql://localhost:3306/mybatis     #数据库名
     username: root
     password: Vv125800
     dbcp2:
